--- a/src/style/index.less
+++ b/src/style/index.less
@@ -25,3 +25,14 @@
     height: 178px;
     display: block;
   }
+ .ql-toolbar.ql-snow {
+   width: 800px;
+  padding: 0 8px !important;
+}
+.ql-container {
+  height: 200px;
+  width: 800px;
+}
+.el-dialog__body{
+  padding-bottom:0;
+}
